# cskillconfirm

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: pre.sh  release.yml
sounds/BF1/: info.json
sounds/BattleField1/: info.json
sounds/bf1/: sound.lua
sounds/bf1_special/: sound.lua
sounds/crossfire/: info.json  sound.lua
sounds/valorant/: info.json  sound.lua
src/: main.rs  soundpack.rs  util.rs
src/soundpack/: lua_script.rs  mod.rs  playback.rs  preset.rs  sound.rs
src/util/: args.rs  handler.rs  playback.rs  state.rs
src/utils/: args.rs  handler.rs  mod.rs  playback.rs
