[package]
name = "cskillconfirm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
cpal = "0.15.3"
gsi-cs2 = { git = "https://github.com/st0nie/gsi-cs2-rs.git" }
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "full"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
