[package]
name = "cskillconfirm"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
rpath = false

[dependencies]
anyhow = "1.0.100"
axum = "0.8.5"
clap = { version = "4.5.32", features = ["derive"] }
cpal = "0.16.0"
gsi-cs2 = { git = "https://github.com/st0nie/gsi-cs2-rs.git" }
rodio = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "full"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
